--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/vue": "^1.1.11",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "firebase": "^11.4.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuefire": "^3.2.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.7",
